k8s/bookshelf-workloads.yaml
# The Bookshelf K8s workloads


# Bookshelf monolith
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-monolith
spec:
  selector:
    matchLabels:
      app: bookshelf-monolith
  replicas: 1
  template:
    metadata:
      labels:
        app: bookshelf-monolith
    spec:
      securityContext:
        runAsUser: 1000
      restartPolicy: Always
      containers:
        - name: bookshelf-monolith
          image: urjcmpuchades/mca-bookshelf-monolith:v1.0
          securityContext:
            allowPrivilegeEscalation: false
---

# User service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  selector:
    matchLabels:
      app: user-service
  replicas: 1
  template:
    metadata:
      labels:
        app: user-service
    spec:
      securityContext:
        runAsUser: 1000
      restartPolicy: Always
      containers:
        - name: user-service
          image: urjcmpuchades/mca-user-service:v1.0
          securityContext:
            allowPrivilegeEscalation: false
---

# MySQL Bookshelf Monolith DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookshelf-monolith-db
spec:
  selector:
    matchLabels:
      app: bookshelf-monolith-db
  replicas: 1
  template:
    metadata:
      labels:
        app: bookshelf-monolith-db
    spec:
      containers:
        - name: bookshelf-monolith-db
          image: mysql:5.7
          volumeMounts:
            - name: bookshelf-monolith-db-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: bookshelf-monolith-db-volume
          persistentVolumeClaim:
            claimName: bookshelf-monolith-db-pvc

---

# MySQL User Service DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-db
spec:
  selector:
    matchLabels:
      app: user-service-db
  replicas: 1
  template:
    metadata:
      labels:
        app: user-service-db
    spec:
      containers:
        - name: user-service-db
          image: mysql:5.7
          ports:
            - containerPort: 3308
              name: user-service-db
          volumeMounts:
            - name: user-service-db-volume
              mountPath: /var/lib/mysql
      volumes:
        - name: user-service-db-volume
          persistentVolumeClaim:
            claimName: user-service-db-pvc
