k8s/planner.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planner-deploy
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: planner
  replicas: 1
  template:
    metadata:
      labels:
        app: planner
        dns-policy: enabled
    spec:
      securityContext:
        runAsUser: 1001
      restartPolicy: Always
      containers:
      - name: planner
        image: oscarsotosanchez/planner:v1.0
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: planner-to-rabbit-weather-topo
spec:
  podSelector:
    matchLabels:
      app: planner
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: rabbitmq
    ports:
    - port: 5672
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: weatherservice
    ports:
    - port: 9090
      protocol: TCP
  - to:
    - podSelector:
        matchLabels:
          app: toposervice
    ports:
    - port: 8080
      protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: planner-deploy
  labels: 
   app: planner
spec:
  selector:
    app: planner
  ports:
  - port: 8080
    targetPort: 8080
